--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>Who I Is</title>
   <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
-<p>Your content goes here.</p>
+  <nav><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav>
+<p><a href="img/bjs.png"><img src="img/bjs.png" width=200/></a>(Source: Myself)</p>
 </body>
 </html>
