--- a/public/bookList.html
+++ b/public/bookList.html
@@ -3,11 +3,12 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <title>Who I Is</title>
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="css/basic.css">
 </head>
 <body>
-  <nav><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav>
-<p> <table class="table table-striped table-bordered">
+  <nav class="navbar navbar-light bg-dark" id="nav"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav>
+ <head><b>My Favorite Books</b></head>
+<p> <table class="table table-bordered">
     <tr>
         <th>Title</th>
         <th>Author</th>
