--- a/public/bookList.html
+++ b/public/bookList.html
@@ -52,13 +52,19 @@
 </table>
 <br>
 <form>
-    <div class="form-group">
-        <input class="form-control" type="text" placeholder="Book Title">
-        <input class="form-control" type="text" placeholder="Author">
-        <input class="form-control" type="text" placeholder="Publication Year">
-        <input class="form-control" type="text" placeholder="Publication Company">
-        <input class="form-control" type="text" placeholder="Page Count">
-        <input class="form-control" type="text" placeholder="Sales Price">
+     <div class="form-row">
+        <div class="form-group col-md-5">
+            <input class="form-control" type="text" placeholder="Book Title">
+        </div>
+        <div class="form-group col-md-5">
+            <input class="form-control" type="text" placeholder="Author">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-2"><input class="form-control" type="text" placeholder="Publication Year"></div>
+        <div class="form-group col-md-4"><input class="form-control" type="text" placeholder="Publication Company"></div>
+        <div class="form-group col-md-2"><input class="form-control" type="text" placeholder="Page Count"></div>
+        <div class="form-group col-md-2"><input class="form-control" type="text" placeholder="Sales Price"></div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button> <!source getbootstrap.com>
 </form>
