--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 <header><b>My Info</b></header>
 <a href="img/bjs.png"><img src="img/bjs.png" class="thumbnail" width=200 /></a><p id="sourcing">Source: Myself</p><br><p id=name>BatJew</p>
 <br><br>
-<p>Hailing from: Sydney, Australia <br><br>
+<p>Hailing from: Australia <br><br>
+  Birthdate: February 29, 1987 <br><br>
+  Age: 33 <br><br>
+  Email: <a href= "mailto: batj@batjew.com">batj@batjew.com</a>
 </p>
 </body>
 </html>
