--- a/public/bookList.html
+++ b/public/bookList.html
@@ -17,7 +17,7 @@
         <th>Page Count</th>
         <th>MSRP</th>
     </tr>
-    <tr>
+    <tr class="bg-success">
         <td><i>Lord of the Rings</i></td>
         <td>J.R.R. Tolkien</td>
         <td>1954</td>
@@ -25,7 +25,7 @@
         <td>1178</td>
         <td>$14.99</td>
     </tr>
-    <tr>
+    <tr class="bg-primary">
         <td><i>I Don't Have Enough Faith to be an Atheist</i></td>
         <td>Frank Turek and Norman Geisler</td>
         <td>2004</td>
@@ -33,7 +33,7 @@
         <td>448</td>
         <td>$19.95</td>
     </tr>
-    <tr>
+    <tr class="bg-info">
         <td><i>Speaker for the Dead</i></td>
         <td>Orson Scott Card</td>
         <td>1986</td>
@@ -41,7 +41,7 @@
         <td>415</td>
         <td>$8.99</td>
     </tr>
-    <tr>
+    <tr class="bg-warning">
         <td><i>The Happiness Advantage</i></td>
         <td>Shawn Achor</td>
         <td>2010</td>
