--- a/public/aboutMe.html
+++ b/public/aboutMe.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/basic.css">
 </head>
 <body>
-    <nav class="navbar navbar-light bg-dark" id="nav"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav><br>
+    <div class="navigate"><nav class="navbar navbar-light bg-dark" id="nav"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav></div><br>
     <header><b>Some Fun Facts</b></header>
 <p>I am a student. <br><br>
     I like to eat food.<br><br>
