--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Who I Is</title>
   <link rel="stylesheet" href="/css/site.css">
 </head>
-<nav id="nav" class="navbar navbar-light bg-dark"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav> <br>
+<div class="navigate"><nav id="nav" class="navbar navbar-light bg-dark"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav></div> <br>
 <body>
 <header><b>My Info</b></header>
 <a href="img/bjs.png"><img src="img/bjs.png" class="thumbnail" width=200 /></a><p id="sourcing">Source: Myself</p><br><p id=name>BatJew</p>
