--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,22 @@
   <link rel="stylesheet" href="css/basic.css">
   <title>Who I Is</title>
   <link rel="stylesheet" href="/css/site.css">
+  <script src="https://unpkg.com/vue@next"></script>
 </head>
 <div class="navigate"><nav id="nav" class="navbar navbar-light bg-dark"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav></div> <br>
 <body>
 <header><b>My Info</b></header>
-<a href="img/bjs.png"><img src="img/bjs.png" class="thumbnail" width=200 /></a><p id="sourcing">Source: Myself</p><br><p id=name>BatJew</p>
-<br><br>
-<p>Hailing from: Australia <br><br>
-  Birthdate: February 29, 1987 <br><br>
-  Age: 33 <br><br>
-  Email: <a href= "mailto: batj@batjew.com">batj@batjew.com</a>
+<div id="rndUserApp">
+<a v-bind:href="result.picture.large"><img v-bind:src=result.picture.thumbnail class="thumbnail" /></a><p id="sourcing">Source: randomUser.me</p><br>
+<p id=name> {{ result.name.first }} {{ result.name.last }} </p>
+<br>
+<p>Hailing from: {{ result.location.city }}, {{ result.location.state }} {{ result.location.country }}<br><br>
+  Birthdate: {{ result.dob.date }} <br><br>
+  Age: {{ result.dob.age }} <br><br>
+  Email: <a v-bind:href= "'mailto:' + result.email">{{ result.email }}</a>
 </p>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="js/rndUser.js"></script>
 </body>
 </html>
