Docker and stuff

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,12 +7,24 @@
   <link rel="stylesheet" href="/css/site.css">
   <script src="https://unpkg.com/vue@next"></script>
 </head>
-<div class="navigate"></div><nav id="nav" class="navbar navbar-light bg-dark">
-  <ul style="list-style-type: ;">
-    <li><a href="index.html">Index</a></li>
-    <li><a href="aboutMe.html">About Me</a></li>
-    <li><a href="bookList.html">My Book List</a></li>
-  </ul></nav></div> <br>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="aboutMe.html">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="bookList.html">Favorite Books</a>
+      </li>
+    </ul>
+  </div>
+</nav><br>
 <body>
 <header><b>My Info</b></header>
 <div id="rndUserApp">
