--- a/app/public/aboutMe.html
+++ b/app/public/aboutMe.html
@@ -6,7 +6,24 @@
   <link rel="stylesheet" href="css/basic.css">
 </head>
 <body>
-    <div class="navigate"><nav class="navbar navbar-light bg-dark" id="nav"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav></div><br>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutMe.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="bookList.html">Favorite Books</a>
+            </li>
+          </ul>
+        </div>
+      </nav><br>
     <header><b>Some Fun Facts</b></header>
 <p>I am a student. <br><br>
     I like to eat food.<br><br>
