--- a/app/public/bookList.html
+++ b/app/public/bookList.html
@@ -9,7 +9,24 @@
     <script src="js/tablesort.min.js"></script>
 </head>
 <body>
-  <div class="navigate"><nav class="navbar navbar-light bg-dark" id="nav"><a href="index.html">Index</a> <a href="aboutMe.html">About Me</a> <a href="bookList.html">My Book List</a></nav></div><br>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutMe.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="bookList.html">Favorite Books</a>
+            </li>
+          </ul>
+        </div>
+      </nav><br>
  <header><b>My Favorite Books</b></header>
     <table id="bookTable" class="table table-bordered">
     <tr data-sort-method="none">
