--- a/app/public/bookList.html
+++ b/app/public/bookList.html
@@ -97,25 +97,25 @@
      </div>
      <div class="col-md-6">
        <label for="author">Author</label>
-         <input class="form-control" id="author" v-model="bookList.author" type="text" placeholder="Author">
+         <input class="form-control" id="author" v-model="bookForm.author" type="text" placeholder="Author">
      </div>
  </div>
  <div class="form-row">
      <div class="col-md-2">
-       <label for="pubYear">Publication Year/label>
-         <input class="form-control" id="pubYear" v-model="bookList.publicationYear" type="text" placeholder="Publication Year">
+       <label for="pubYear">Publication Year</label>
+         <input class="form-control" id="pubYear" v-model="bookForm.yearPublished" type="year" placeholder="Publication Year">
      </div>
      <div class="col-md-4">
        <label for="publisher">Publisher</label>
-         <input class="form-control" id="publisher" v-model="bookList.publisher" type="text" placeholder="Publication Company">
+         <input class="form-control" id="publisher" v-model="bookForm.publisher" type="text" placeholder="Publication Company">
      </div>
      <div class="col-md-2">
        <label for="pageCount">Page Count</label>
-         <input class="form-control" id="pageCount" v-model="bookForm.pageCount" type="text" placeholder="Page Count">
+         <input class="form-control" id="pageCount" v-model="bookForm.pageCount" type="integer" placeholder="Page Count">
      </div>
      <div class="col-md-2">
        <label for="salesPrice">Sales Price</label>
-         <input class="form-control" id="salesPrice" type="text" placeholder="Sales Price" v-model="bookForm.msrp">
+         <input class="form-control" id="salesPrice" type="number" placeholder="Sales Price" v-model="bookForm.msrp">
      </div>
  </div>
  <button type="submit" class="btn btn-primary">Submit</button> 
