--- a/app/public/bookList.html
+++ b/app/public/bookList.html
@@ -115,7 +115,7 @@
      </div>
      <div class="col-md-2">
        <label for="salesPrice">Sales Price</label>
-         <input class="form-control" id="salesPrice" type="number" placeholder="Sales Price" v-model="bookForm.msrp">
+         <input class="form-control" id="salesPrice" type="double" placeholder="Sales Price" v-model="bookForm.msrp">
      </div>
  </div>
  <button type="submit" class="btn btn-primary">Submit</button> 
