it is pretty now :)

--- a/app/public/aboutMe.html
+++ b/app/public/aboutMe.html
@@ -23,8 +23,8 @@
             </li>
           </ul>
         </div>
-      </nav><br>
-    <header><b>Some Fun Facts</b></header>
+      </nav>
+    <header><h1><b>Some Fun Facts</b></h1></header>
 <p>I am a student. <br><br>
     I like to eat food.<br><br>
     I like to fish.<br><br>
