--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,9 +23,9 @@
       </li>
     </ul>
   </div>
-</nav><br>
+</nav>
 <body>
-<header><b>My Info</b></header>
+<header><h1><b>My Info</b></h1></header>
 <div id="rndUserApp">
 <a v-bind:href="result.picture.large"><img v-bind:src=result.picture.medium class="thumbnail" /></a><p id="sourcing">Source: randomUser.me</p><br>
 <p id=name> {{ result.name.first }} {{ result.name.last }} </p>
